--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
