--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.DateChooser.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\mysql-connector-java-5.1.38-bin.jar
+file.reference.DateChooser.jar=/Users/ricardo/Downloads/Desktop-2/DateChooser.jar
+file.reference.jcalendar-1.4.jar=/Users/ricardo/Downloads/Desktop-2/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/ricardo/Downloads/Desktop-2/mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\F\u00e1bio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/ricardo/Library/Application Support/NetBeans/8.0.2/build.properties
