--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,15 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.DateChooser.jar=C:\\Users\\Asus\\Desktop\\jdatechooser\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Desktop\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Desktop\\mysql-connector-java-5.1.38-bin.jar
+file.reference.jcalendar-1.4.jar-1=Libraries\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
