--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.DateChooser.jar=C:\\Users\\Asus\\Desktop\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Desktop\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Desktop\\mysql-connector-java-5.1.38-bin.jar
+file.reference.DateChooser.jar=/Users/ricardo/NetBeansProjects/app2016/DateChooser.jar
+file.reference.jcalendar-1.4.jar=/Users/ricardo/NetBeansProjects/app2016/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/ricardo/NetBeansProjects/app2016/mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/ricardo/Library/Application Support/NetBeans/8.0.2/build.properties
