--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.DateChooser.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\app2016\\Libraries\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\app2016\\Libraries\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
+file.reference.DateChooser.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\DateChooser.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Jo\u00e3o Vilaverde\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
