--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -10,9 +10,9 @@ user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\8.1\\build.pro
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.DateChooser.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\app2016\\Libraries\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\app2016\\Libraries\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\F\u00e1bio\\Documents\\NetBeansProjects\\Prototipo\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
+file.reference.DateChooser.jar=/Users/ricardo/Documents/app2016/Libraries/DateChooser.jar
+file.reference.jcalendar-1.4.jar=/Users/ricardo/Documents/app2016/Libraries/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/ricardo/Documents/app2016/Libraries/mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\F\u00e1bio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
