--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/Prototype.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=../../Downloads/AbsoluteLayout.jar
+file.reference.beansbinding-1.2.1-sources.jar=../../Downloads/beansbinding-1.2.1-sources.jar
 file.reference.DateChooser.jar=C:\\Users\\Asus\\Desktop\\jdatechooser\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Desktop\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Desktop\\mysql-connector-java-5.1.38-bin.jar
@@ -39,7 +41,8 @@ javac.classpath=\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.beansbinding-1.2.1-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
