--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -15,4 +15,4 @@ file.reference.jcalendar-1.4.jar=/Users/ricardo/Documents/app2016/Libraries/jcal
 file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/ricardo/Documents/app2016/Libraries/mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\F\u00e1bio\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=/Users/ricardo/Library/Application Support/NetBeans/8.0.2/build.properties
