--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,8 +3,8 @@ do.depend=false
 do.jar=true
 file.reference.AbsoluteLayout.jar=C:\\Users\\Administrador.POSTO3\\Documents\\NetBeansProjects\\app2016\\Libraries\\AbsoluteLayout.jar
 file.reference.beansbinding-1.2.1-sources.jar=C:\\Users\\Administrador.POSTO3\\Documents\\NetBeansProjects\\app2016\\Libraries\\beansbinding-1.2.1-sources.jar
-file.reference.AbsoluteLayout.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\Libraries\\AbsoluteLayout.jar
-file.reference.beansbinding-1.2.1-sources.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\Libraries\\beansbinding-1.2.1-sources.jar
+file.reference.AbsoluteLayout.jar=/Users/ricardo/Documents/app2016/Libraries/AbsoluteLayout.jar
+file.reference.beansbinding-1.2.1-sources.jar=/Users/ricardo/Documents/app2016/Libraries/beansbinding-1.2.1-sources.jar
 file.reference.DateChooser.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
@@ -25,15 +25,15 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\a
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Jo\u00e3o Vilaverde\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/Users/ricardo/Library/Application Support/NetBeans/8.0.2/build.properties
 compile.on.save=true
 do.depend=false
 do.jar=true
 file.reference.DateChooser.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\DateChooser.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Asus\\Documents\\NetBeansProjects\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
-file.reference.DateChooser.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\Libraries\\DateChooser.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\Libraries\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.38-bin.jar=C:\\Users\\Jo\u00e3o Vilaverde\\Documents\\NetBeansProjects\\app2016\\Libraries\\mysql-connector-java-5.1.38-bin.jar
+file.reference.DateChooser.jar=/Users/ricardo/Documents/app2016/Libraries/DateChooser.jar
+file.reference.jcalendar-1.4.jar=/Users/ricardo/Documents/app2016/Libraries/jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar=/Users/ricardo/Documents/app2016/Libraries/mysql-connector-java-5.1.38-bin.jar
 javac.debug=true
 javadoc.preview=true
